# jo_serv

./: .bumpversion.cfg  .gitignore  Makefile  README.md  requirements_dev.txt  setup.cfg  tox.ini
readme/: Deep-dive.md  Quickstart.md  README.md
src/jo_serv/: __init__.py  cli.py
src/jo_serv/example_module/: __init__.py  example_class.py
src/jo_serv/server/: server.py
src/jo_serv/tools/: canva.py  event.py  excel_mgmt.py  excel_parser.py  killer.py  match_mgmt.py  old_functions.py  pmu.py  shifumi.py  tools.py
tests/: __init__.py  test_cli.py  test_jo_serv.py
tests/test_jo_serv/: test_jo_serv.py
