[metadata]
name = jo_serv
version = file: src/jo_serv/VERSION
author = Piedpied
author_email = pierrickcurt@hotmail.fr
description = JO server source code
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pcurt/jo_serv
classifiers =
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: Other/Proprietary License

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    Click == 8.0.3
    flask == 2.0.3
    flask-login == 0.5.0
zip_safe = False
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    jo_serv = jo_serv.cli:main

[bumpversion]
# No configuration here, the settings are stored in .bumpversion.cfg,
# otherwise all the comments of setup.cfg get deleted whenever bumpversion runs
# See this issue: https://github.com/c4urself/bump2version/issues/37

[flake8]
exclude = docs
max-line-length = 100
# Ignore import warnings in __init__ files
per-file-ignores = __init__.py:F401
extend-ignore = E203

[mypy]
python_version = 3.9
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_untyped_calls = True
ignore_missing_imports = False

[isort]
profile = black

[coverage:run]
branch = True
source = jo_serv
parallel = True

[coverage:paths]
source =
    src/
    .tox/**/site-packages